intialized all pages with nav bar

--- a/ktphackathon/src/frontend/about.html
+++ b/ktphackathon/src/frontend/about.html
@@ -15,9 +15,8 @@
       <li><a href="profile.html">Profile</a></li>
     </ul>
   </nav>
+<h1>About</h1>
 
-  <h1 class = "title">NutriCrate</h1>
-  <p class = "subtitle">Fuel Up, Feel Great</p>
 
   <script src="script.js"></script>
 </body>
