--- a/ktphackathon/src/frontend/products.html
+++ b/ktphackathon/src/frontend/products.html
@@ -16,8 +16,7 @@
     </ul>
   </nav>
 
-  <h1 class = "title">NutriCrate</h1>
-  <p class = "subtitle">Fuel Up, Feel Great</p>
+    <h1>Products</h1>
 
   <script src="script.js"></script>
 </body>
