about page created

--- a/ktphackathon/src/frontend/about.html
+++ b/ktphackathon/src/frontend/about.html
@@ -1,22 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>KTP Hackathon</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>About | NutriCrate</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
-<body>
+<body class="about-page">
   <nav class="navbar">
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
+      <li><a href="about.html" class="active">About</a></li>
       <li><a href="products.html">Products</a></li>
       <li><a href="profile.html">Profile</a></li>
     </ul>
   </nav>
-<h1>About</h1>
 
+  <main class="about about-bg">
+    <h1>About NutriCrate</h1>
+    <p class="tagline"><strong>Fuel Up, Feel Great</strong></p>
+
+    <section class="mission">
+      <h2>Our Mission</h2>
+      <p>
+        At <strong>NutriCrate</strong>, we believe that discovering your next
+        favorite supplement should be as exciting as opening a gift. Our mission
+        is to help fitness enthusiasts, athletes, and everyday movers explore a
+        wide variety of trusted nutrition brands—without the commitment or
+        guesswork. Each month, we deliver a curated mystery box of energy
+        drinks, protein powders, bars, and performance snacks designed to keep
+        you fueled, motivated, and feeling great.
+      </p>
+    </section>
+
+    <section class="story">
+      <h2>How We Started</h2>
+      <p>
+        NutriCrate began in 2024 when a small group of college fitness lovers
+        realized how hard it was to find new supplements without buying huge
+        tubs or full cases. What started as a dorm-room idea—sharing sample
+        packs and rating them for fun—grew into a passion project to connect
+        people with products that actually work for their lifestyle. We launched
+        NutriCrate to make discovery easy, affordable, and fun again.
+      </p>
+    </section>
+
+    <section class="future">
+      <h2>Where We’re Headed</h2>
+      <p>
+        As we grow, our goal is to partner with more brands, expand our
+        selection to include hydration, vitamins, and recovery products, and
+        build a personalized recommendation engine so each box feels made just
+        for you. We’re also working on integrating sustainable packaging and
+        carbon-neutral shipping to make every delivery a little better for the
+        planet.
+      </p>
+      <p>
+        Whether you’re chasing PRs at the gym or just trying to stay energized
+        through the day, NutriCrate is here to help you <em>fuel up and feel
+        great</em>.
+      </p>
+    </section>
+  </main>
+
+  <footer>
+    <p>© 2025 NutriCrate. All rights reserved.</p>
+  </footer>
 
   <script src="script.js"></script>
 </body>
