--- a/ktphackathon/src/frontend/index.html
+++ b/ktphackathon/src/frontend/index.html
@@ -12,7 +12,7 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
       <li><a href="products.html">Products</a></li>
-      <li><a href="profile.html">Profile</a></li>
+      <li><a href="profile-redirect.html">Profile</a></li>
     </ul>
   </nav>
 
